adicionado star com node

--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "description": "back-end projeto gama",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "author": "Marina Fischer",
   "license": "ISC",
